--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     restart: always
     networks:
       - cocos-network
+    depends_on:
+      - reverse-proxy
 networks:
   cocos-network:
     external: true
