--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,7 +15,8 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             # Stop and remove repo if it exists
-            if [ -f /tmp/test.txt ];then echo cd development/cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
+            cd development
+            if [ -d cocos-concierge ];then echo cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
             git clone git@github.com:neutonfoo/cocos-concierge.git
             cd cocos-concierge
             ./reverse-proxy/nginx-conf-generator.sh
