--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,11 +14,22 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            # Stop and remove repo if it exists
             cd development
-            if [ -d cocos-concierge ];then echo cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
+
+            # Stop and remove repo if it exists
+            if [ -d cocos-concierge ];then cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
             git clone git@github.com:neutonfoo/cocos-concierge.git
             cd cocos-concierge
+
+            # Start the Updater service
+            cd updater
+            python3 -m venv env
+            source env/bin/activate
+            pip install -r requirements.txt
+            nohup python app.py >/dev/null 2>&1 &
+            cd ../
+
+            # Start reverse-proxy and certbot
             ./reverse-proxy/nginx-conf-generator.sh
             docker compose up -d --build
 
