--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,24 @@
+version: '3'
 services:
   reverse-proxy:
     build:
       context: reverse-proxy
     ports:
       - "80:80"
+      - "443:443"
     restart: always
     networks:
       - cocos-network
-  updater:
-    build:
-      context: .
-      dockerfile: updater/Dockerfile
-    restart: always
-    networks:
-      - cocos-network
-    depends_on:
-      - reverse-proxy
+    volumes:
+      - /root/ssl/certbot/conf:/etc/letsencrypt
+      - /root/ssl/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - /root/ssl/certbot/conf:/etc/letsencrypt
+      - /root/ssl/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 networks:
   cocos-network:
     external: true
