--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,6 +14,9 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
+
+            set -x
+
             cd development
 
             # Kill the previous Updater nohup service
@@ -25,7 +28,7 @@ jobs:
             cd cocos-concierge
 
             # Start the Updater service
-            cd updater
+            cd concierge
             python3 -m venv env
             source env/bin/activate
             pip install -r requirements.txt
@@ -34,23 +37,4 @@ jobs:
 
             # Start reverse-proxy and certbot
             ./reverse-proxy/nginx-conf-generator.sh
-            docker compose up -d --build
-
-# name: GitHub Actions Demo
-# run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-# on: [push]
-# jobs:
-#   Explore-GitHub-Actions:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-#       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-#       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-#       - name: Check out repository code
-#         uses: actions/checkout@v3
-#       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-#       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-#       - name: List files in the repository
-#         run: |
-#           ls ${{ github.workspace }}
-#       - run: echo "🍏 This job's status is ${{ job.status }}."
+            docker compose up -d --build --force-recreate
