Added ice bear's table

--- a/projects.json
+++ b/projects.json
@@ -2,6 +2,7 @@
     "daemons": {},
     "services": {
         "ice-bear-map": "elaineduh/ice-bear-map",
-        "test-web": "neutonfoo/test-web"
+        "test-web": "neutonfoo/test-web",
+        "ice-bears-table": "neutonfoo/ice-bears-table"
     }
 }
