Cleaned up scripts

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ jobs:
             kill -9 `pgrep python`
 
             # Stop and remove repo if it exists
-            if [ -d cocos-concierge ];then cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
+            if [[ -d "cocos-concierge" ]];then cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
             git clone --depth 1 --branch main git@github.com:neutonfoo/cocos-concierge.git
             cd cocos-concierge
 
