--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,4 +14,26 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            cd 
+            set -x
+
+            cd development
+
+            # Kill the previous Updater nohup service
+            kill -9 `pgrep python`
+
+            # Stop and remove repo if it exists
+            if [[ -d "cocos-concierge" ]];then cd cocos-concierge; docker compose down; cd ../; rm -rf cocos-concierge; fi
+            git clone --depth 1 --branch main git@github.com:neutonfoo/cocos-concierge.git
+            cd cocos-concierge
+
+            # Start the Updater service
+            cd concierge
+            python3 -m venv env
+            source env/bin/activate
+            pip install -r requirements.txt
+            nohup python app.py &>logs/concierge.app.txt &
+            cd ../
+
+            # Start reverse-proxy and certbot
+            ./reverse-proxy/nginx-conf-generator.sh
+            docker compose up -d --build --force-recreate
