Added ansi2html to requirements

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,5 +35,5 @@ jobs:
             cd ../
 
             # Start reverse-proxy and certbot
-            ./reverse-proxy/nginx-conf-generator.sh
+            # ./reverse-proxy/nginx-conf-generator.sh
             docker compose up -d --build --force-recreate
