--- a/projects.json
+++ b/projects.json
@@ -7,6 +7,7 @@
   "services": {
     "ice-bears-map": "elaineduh/ice-bear-map",
     "test-web": "neutonfoo/test-web",
-    "ice-bears-table": "neutonfoo/ice-bears-table"
+    "ice-bears-table": "neutonfoo/ice-bears-table",
+    "yama-server": "neutonfoo/yama-server"
   }
 }
